...
        android:background="@drawable/et_rounded_style"
        android:drawableLeft="@drawable/sym_comment_black_24dp"
        android:drawablePadding="10dp"
        android:onClick="captionClick"/>

    <TextView
        android:id="@+id/captionTextView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#FFF"
        android:textSize="20sp" />
...
        android:text="@string/snap"
        android:textStyle="bold"
        android:drawableLeft="@drawable/sym_camera_black_24dp"
        android:drawablePadding="3dp"/>

    <Button
        android:id="@+id/filterPhotoButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_below="@+id/takePhotoButton"
        android:layout_alignStart="@+id/takePhotoButton"
        android:layout_alignLeft="@+id/takePhotoButton"
        android:layout_marginTop="15dp"
...
