<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/keywordsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/caption_based_search"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="#fff"/>

    <EditText
        android:id="@+id/keywordsEditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/keywordsTextView"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:inputType="textCapSentences"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="#eee"
        android:hint="Enter Keywords"
        android:textColorHint="#eee"
        android:autofillHints=""
        android:background="@drawable/et_rounded_style"
        android:drawableLeft="@drawable/ic_font_download_white_24dp"
        android:drawablePadding="10dp"
        android:onClick="searchForCaptionClick" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/keywordsEditText"
        android:layout_marginTop="50dp"
        android:text="Time Based Search"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textColor="#fff"/>

    <EditText
        android:id="@+id/timeStartEditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeTextView"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:inputType="datetime"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="#eee"
        android:hint="Start Time: YYYYMMDD HHMMSS"
        android:autofillHints=""
        android:textColorHint="#eee"
        android:background="@drawable/et_rounded_style"
        android:drawableLeft="@drawable/ic_date_range_white_24dp"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/timeEndEditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeStartEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:inputType="datetime"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="#eee"
        android:hint="End Time: YYYYMMDD HHMMSS"
        android:textColorHint="#eee"
        android:autofillHints=""
        android:background="@drawable/et_rounded_style"
        android:drawableLeft="@drawable/ic_date_range_white_24dp"
        android:drawablePadding="10dp" />


    <Button
        android:id="@+id/searchTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/timeEndEditText"
        android:layout_alignLeft="@id/timeEndEditText"
        android:layout_alignStart="@id/timeEndEditText"
        android:layout_alignRight="@id/timeEndEditText"
        android:layout_alignEnd="@id/timeEndEditText"
        android:layout_marginTop="5dp"
        android:background="@drawable/et_rounded_button"
        android:text="Go"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-medium"
        android:onClick="searchForTimeClick"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchTimeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:text="Location Based Search"
        android:textColor="#fff"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/topLeftTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:text="Top Left Coordinates"
        android:textColor="#fff"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/topLeftLatEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLeftTextView"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/searchTimeButton"
        android:layout_alignLeft="@id/searchTimeButton"
        android:padding="10dp"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="#eee"
        android:hint="Enter Latitude"
        android:textColorHint="#eee"
        android:autofillHints=""
        android:background="@drawable/et_rounded_style"
        android:drawableLeft="@drawable/ic_location_on_white_24dp"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/topLeftLongEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLeftTextView"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@id/searchTimeButton"
        android:layout_alignRight="@id/searchTimeButton"
        android:padding="10dp"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="#eee"
        android:hint="Enter Longitude"
        android:textColorHint="#eee"
        android:autofillHints=""
        android:background="@drawable/et_rounded_style"
        android:drawableLeft="@drawable/ic_location_on_white_24dp"
        android:drawablePadding="10dp" />

    <TextView
        android:id="@+id/bottomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLeftLatEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:text="Bottom Right Coordinates"
        android:textColor="#fff"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/bottomRightLatEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottomTextView"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/searchTimeButton"
        android:layout_alignLeft="@id/searchTimeButton"
        android:padding="10dp"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="#eee"
        android:hint="Enter Latitude"
        android:textColorHint="#eee"
        android:autofillHints=""
        android:background="@drawable/et_rounded_style"
        android:drawableLeft="@drawable/ic_location_on_white_24dp"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/bottomRightLongEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottomTextView"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@id/searchTimeButton"
        android:layout_alignRight="@id/searchTimeButton"
        android:padding="10dp"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="#eee"
        android:hint="Enter Latitude"
        android:textColorHint="#eee"
        android:autofillHints=""
        android:background="@drawable/et_rounded_style"
        android:drawableLeft="@drawable/ic_location_on_white_24dp"
        android:drawablePadding="10dp" />

    <Button
        android:id="@+id/searchLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/bottomRightLongEditText"
        android:layout_alignLeft="@id/bottomRightLatEditText"
        android:layout_alignStart="@id/bottomRightLatEditText"
        android:layout_alignRight="@id/bottomRightLongEditText"
        android:layout_alignEnd="@id/bottomRightLongEditText"
        android:layout_marginTop="5dp"
        android:background="@drawable/et_rounded_button"
        android:text="Go"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-medium"
        android:onClick="searchForLocationClick"
        android:textAllCaps="true"/>


</RelativeLayout>